Rename jumbotron-header jumbotron-form

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -8221,7 +8221,7 @@ select[disabled] {
     color: #000 !important;
   }
 }
-._1933yrd {
+.jumbotron-form__input-location-wrapper {
   width: -webkit-calc(100% - 1px) !important;
   width: -moz-calc(100% - 1px) !important;
   width: calc(100% - 1px) !important;
@@ -8230,10 +8230,10 @@ select[disabled] {
   border-radius: 8px !important;
   display: inline-block !important;
 }
-._1933yrd:focus-within {
+.jumbotron-form__input-location-wrapper:focus-within {
   box-shadow: #222 0 0 0 2px inset !important;
 }
-._zsobkb {
+.jumbotron-form__input-location {
   position: relative !important;
   cursor: text !important;
   display: inline-block !important;
@@ -8250,7 +8250,7 @@ select[disabled] {
   font-weight: 400 !important;
   height: auto !important;
 }
-._qj3uspc {
+.input-text {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -8265,45 +8265,45 @@ select[disabled] {
   padding: 0 !important;
   color: #222 !important;
 }
-._qj3uspc:-webkit-autofill {
+.input-text:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._qj3uspc:-webkit-autofill:hover {
+.input-text:-webkit-autofill:hover {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._qj3uspc:-webkit-autofill:focus {
+.input-text:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._qj3uspc:-webkit-autofill:active {
+.input-text:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-._qj3uspc::-ms-clear {
+.input-text::-ms-clear {
   display: none !important;
 }
-._qj3uspc::-webkit-input-placeholder {
+.input-text::-webkit-input-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._qj3uspc::-moz-placeholder {
+.input-text::-moz-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._qj3uspc:-moz-placeholder {
+.input-text:-moz-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._qj3uspc:-ms-input-placeholder {
+.input-text:-ms-input-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._qj3uspc:focus {
+.input-text:focus {
   color: #222 !important;
 }
-._x49nu0b {
+.jumbotron-form__input-dates-wrapper {
   display: inline-block !important;
   width: 50% !important;
   padding: 8px 16px !important;
@@ -8312,21 +8312,21 @@ select[disabled] {
   border: 0 !important;
   outline: 0 !important;
 }
-._x49nu0b:focus-within {
+.jumbotron-form__input-dates-wrapper:focus-within {
   box-shadow: #222 0 0 0 2px inset !important;
 }
-._x49nu0b::-moz-focus-inner {
+.jumbotron-form__input-dates-wrapper::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._x49nu0b:focus::-moz-focus-inner {
+.jumbotron-form__input-dates-wrapper:focus::-moz-focus-inner {
   border: none !important;
 }
-._x49nu0b:-moz-focusring {
+.jumbotron-form__input-dates-wrapper:-moz-focusring {
   outline: 0 !important;
 }
-._bcfvf1 {
+.jumbotron-form__input-dates-label {
   pointer-events: none !important;
   font-size: 10px !important;
   line-height: 20px !important;
@@ -8338,7 +8338,7 @@ select[disabled] {
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
 }
-._1entf7wh {
+.jumbotron-form__input-dates {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif !important;
   font-weight: 400 !important;
@@ -8348,7 +8348,7 @@ select[disabled] {
   line-height: 20px !important;
   color: #717171 !important;
 }
-._17dommy {
+.input-group {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   position: relative !important;
@@ -8368,7 +8368,7 @@ select[disabled] {
   width: 1px !important;
   position: relative !important;
 }
-._1osbgamv {
+.input-select-container {
   width: 50% !important;
   padding: 8px 16px !important;
   box-shadow: default !important;
@@ -8376,17 +8376,17 @@ select[disabled] {
   display: inline-block !important;
   border: 0 !important;
 }
-._1osbgamv:focus-within {
+.input-select-container:focus-within {
   box-shadow: #222 0 0 0 2px inset !important;
 }
-._1uxqedk {
+.input-group-hr {
   background: #ddd !important;
   width: 1px !important;
   height: 38px !important;
   top: 9px !important;
   position: relative !important;
 }
-._mfpxui {
+.input-group-select {
   position: relative !important;
   display: -webkit-box !important;
   display: -moz-box !important;
@@ -8404,7 +8404,7 @@ select[disabled] {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._14i70x2 {
+.input-select {
   -moz-appearance: none !important;
   appearance: none !important;
   min-height: auto !important;
@@ -8422,41 +8422,41 @@ select[disabled] {
   height: auto !important;
   padding: 0 !important;
 }
-._14i70x2::-ms-expand {
+.input-select::-ms-expand {
   display: none !important;
 }
-._14i70x2:-moz-focusring {
+.input-select:-moz-focusring {
   outline-color: transparent !important;
   color: transparent !important;
   text-shadow: 0 0 0 #000 !important;
 }
-._14i70x2:disabled {
+.input-select:disabled {
   cursor: not-allowed !important;
 }
-._14i70x2::-webkit-input-placeholder {
+.input-select::-webkit-input-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._14i70x2::-moz-placeholder {
+.input-select::-moz-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._14i70x2:-moz-placeholder {
+.input-select:-moz-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._14i70x2:-ms-input-placeholder {
+.input-select:-ms-input-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
   font-weight: 400 !important;
 }
-._14i70x2:focus {
+.input-select:focus {
   color: #222 !important;
 }
-._8rqbd8 {
+.input-select-icon {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -8476,38 +8476,38 @@ select[disabled] {
   bottom: 2px !important;
   padding: 0 !important;
 }
-.s5apxcc[class][class] {
+.jumbotron-form__container[class][class] {
   width: 100%;
 }
-.dir.s5apxcc[class][class] {
+.dir.jumbotron-form__container[class][class] {
   background: var(--f-mkcy-f);
 }
-.dir.d6h2c75[class][class] {
+.dir.jumbotron-form__container-dates[class][class] {
   margin-top: var(--fgg-f-l-a);
 }
-.ghsx3gm[class][class] {
+.jumbotron-form__container-guests[class][class] {
   overflow: hidden;
 }
-.dir.ghsx3gm[class][class] {
+.dir.jumbotron-form__container-guests[class][class] {
   margin-top: var(--fgg-f-l-a);
 }
-.s1azt9tr[class][class] {
+.jumbotron-form__container-search-btn[class][class] {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.dir.s1azt9tr[class][class] {
+.dir.jumbotron-form__container-search-btn[class][class] {
   margin-top: var(--jaa-ni-h);
   border: 0;
 }
-.dir-ltr.s1azt9tr[class][class] {
+.dir-ltr.jumbotron-form__container-search-btn[class][class] {
   border-top-right-radius: var(--go-h-jh-l);
   border-bottom-right-radius: var(--go-h-jh-l);
 }
 .b1ix3yvq[class][class] {
   width: 100%;
 }
-.dir-ltr.s1nhzxhu[class][class] {
+.dir-ltr.jumbotron-btn-search-text[class][class] {
   margin-left: 4px;
 }
 .c1rqr4x4[class][class] {
@@ -8563,7 +8563,7 @@ select[disabled] {
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
   }
 }
-.b18dinp0[class][class] {
+.jumbotron-btn-search[class][class] {
   display: inline-block;
   position: relative;
   text-decoration: none;
@@ -8573,7 +8573,7 @@ select[disabled] {
   font-family: inherit;
   touch-action: manipulation;
 }
-.dir.b18dinp0[class][class] {
+.dir.jumbotron-btn-search[class][class] {
   cursor: pointer;
   margin: 0;
   text-align: center;
@@ -8586,16 +8586,16 @@ select[disabled] {
   padding-right: 8px;
   background: #d3d3d3;
 }
-.b18dinp0[class][class]:disabled {
+.jumbotron-btn-search[class][class]:disabled {
   opacity: 0.3;
 }
-.dir.b18dinp0[class][class]:disabled {
+.dir.jumbotron-btn-search[class][class]:disabled {
   cursor: not-allowed;
 }
-.b1yeynnt[class][class] {
+.jumbotron-btn-search-fw[class][class] {
   width: 100%;
 }
-.va8sgbq[class][class] {
+.jumbotron-btn-search-bg[class][class] {
   font-family: var(--e-ls-qkw);
   font-size: var(--iw-ehf-f);
   line-height: var(---s-l-myu);
@@ -8603,7 +8603,7 @@ select[disabled] {
   outline: 0;
   color: var(--f-mkcy-f);
 }
-.dir.va8sgbq[class][class] {
+.dir.jumbotron-btn-search-bg[class][class] {
   border-radius: var(--go-h-jh-l);
   border-width: 1px;
   padding: 14px 24px;
@@ -8612,45 +8612,45 @@ select[disabled] {
   background: var(--dls19-brand-gradient, var(--dc-gy-f-v));
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.va8sgbq[class][class] {
+  .dir.jumbotron-btn-search-bg[class][class] {
     transition: none;
   }
 }
-.dir.va8sgbq[class][class]::-moz-focus-inner {
+.dir.jumbotron-btn-search-bg[class][class]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.va8sgbq[class][class]:focus::-moz-focus-inner {
+.dir.jumbotron-btn-search-bg[class][class]:focus::-moz-focus-inner {
   border: none;
 }
-.va8sgbq[class][class]:-moz-focusring {
+.jumbotron-btn-search-bg[class][class]:-moz-focusring {
   outline: 0;
 }
-.dir.va8sgbq[class][class]:active {
+.dir.jumbotron-btn-search-bg[class][class]:active {
   transform: scale(0.96);
 }
-.va8sgbq[class][class]:disabled {
+.jumbotron-btn-search-bg[class][class]:disabled {
   opacity: 1;
 }
-.va8sgbq[class][class]:hover {
+.jumbotron-btn-search-bg[class][class]:hover {
   color: var(--f-mkcy-f);
 }
-.dir.va8sgbq[class][class]:hover {
+.dir.jumbotron-btn-search-bg[class][class]:hover {
   border: none;
   background: var(--dls19-brand-gradient, var(--dc-gy-f-v));
 }
-.va8sgbq[class][class]:active {
+.jumbotron-btn-search-bg[class][class]:active {
   color: var(--f-mkcy-f);
 }
-.dir.va8sgbq[class][class]:active {
+.dir.jumbotron-btn-search-bg[class][class]:active {
   border: none;
   background: var(--dls19-brand-gradient-accent, var(--ihf-tp-q));
 }
-.va8sgbq[class][class]:disabled {
+.jumbotron-btn-search-bg[class][class]:disabled {
   color: var(--f-mkcy-f);
 }
-.dir.va8sgbq[class][class]:disabled {
+.dir.jumbotron-btn-search-bg[class][class]:disabled {
   border: none;
   background: var(--iw-ihca);
 }
@@ -8699,7 +8699,7 @@ select[disabled] {
   position: relative;
   pointer-events: none;
 }
-.lmddin9[class][class] {
+.input-label[class][class] {
   font-size: var(--hr-k-udr);
   line-height: var(--dpgw-ac);
   color: var(--f-k-smk-x);
@@ -8862,12 +8862,12 @@ select[disabled] {
 .csrtfuq[class][class] {
   display: initial;
 }
-.dir.va8sgbq[class][class]:focus-visible {
+.dir.jumbotron-btn-search-bg[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.va8sgbq[class][class]:focus-visible {
+  .dir.jumbotron-btn-search-bg[class][class]:focus-visible {
     transition: none;
   }
 }
